--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string-array name="class_arrays">
+        <item>Warrior</item>
+        <item>Mage</item>
+        <item>Assassin</item>
+        <item>Hunter</item>
+        <item>Healer</item>
+    </string-array>
+
     <string name="warrior_description">Front line melee class , generally play the tank role for the party.\n</string>
 </resources>
